--- a/projects/platonic-solids.html
+++ b/projects/platonic-solids.html
@@ -34,23 +34,30 @@
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p>
-                Platonic solids, also called regular solids or regular polyhedra, are convex polyhedrons with identical faces composed of convex regular polygons. Euclid (ancient Greek mathematician) proved that there are five of such solids: the cube, dodecahedron,
+                Platonic solids, also called regular solids or regular polyhedra, are convex polyhedrons with identical
+                faces composed of convex regular polygons. Euclid (ancient Greek mathematician) proved that there are
+                five of such solids: the cube, dodecahedron,
                 icosahedron, octahedron, and tetrahedron.
             </p>
 
             <p>
-                The name of Platonic solids was given due the Athenian philosopher Plato, who in his dialogue Timaeus related four of the regular polyhedra with the four basic elements (fire, air, water, and earth), which were believed to compose all the matter through
-                their combinations, and the fifth polyhedron was associated heaven and the constellations. The tetrahedron was assigned to fire, the cube to earth, the octahedron to air, the icosahedron to water, and the dodecahedron to heaven and constellations.
+                The name of Platonic solids was given due the Athenian philosopher Plato, who in his dialogue Timaeus
+                related four of the regular polyhedra with the four basic elements (fire, air, water, and earth), which
+                were believed to compose all the matter through
+                their combinations, and the fifth polyhedron was associated heaven and the constellations. The
+                tetrahedron was assigned to fire, the cube to earth, the octahedron to air, the icosahedron to water,
+                and the dodecahedron to heaven and constellations.
             </p>
 
         </div>
 
-        <div class="w3-container w3-row " >
+        <div class="w3-container w3-row ">
             <!-- workaround to center iframe -->
             <div class="w3-col m2 l2 w3-hide-small">
                 <p></p>
             </div>
-            <iframe id="scene" class="w3-col l8" src="./src/platonic-solids-application.html" height="400" style="border:2px solid black;"></iframe>
+            <iframe id="scene" class="w3-col l8" src="./src/platonic-solids-application.html" height="400"
+                style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
 
@@ -63,29 +70,35 @@
                     scene.setAttribute('scrolling', 'no');
                 }
             </script>
-        </div>
+            <!-- Options buttons -->
+            <div class="w3-row-padding w3-black options-buttons-container">
 
-        <div class="w3-content w3-display-container w3-center w3-cell-row">
-            <div class="w3-container w3-cell">
-                <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Quality of the images</h3>
-                <div class="w3-container w3-row">
-                    <p>
-                        <a id="" href="./src/platonic-solids-application.html" target="_blank">High Quality in 
-                            fullscreen <br> on a new tab</a>
-                    </p>
+                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                    <a href="./src/platonic-solids-application.html" target="_">
+                        <div class=" w3-display-container"
+                            style="background: url('img/Platonic-Solids/blur.jpg') center;">
+                            <div class="w3-padding" style="width:100%">
+                                <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
+                                <br />High Quality
+                            </div>
+                        </div>
+                    </a>
                 </div>
+
+                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                    <a href="./src/platonic-solids-application-AR.html" target="_">
+                        <div class=" w3-display-container"
+                            style="background: url('img/Platonic-Solids/blur-AR.jpg') center;">
+                            <div class="w3-padding" style="width:100%">
+                                <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
+                                <br />Augmented Reality
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
             </div>
-            <div class="w3-container w3-cell">
-                <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Other Tools</h3>
-                <p style="text-align:center;">
-                    <a id="" href="./src/platonic-solids-application-AR.html" target="_blank">Augmented Reality in fullscreen 
-                        <br> on a new tab</a>
-                    <br><b class="w3-small" style="text-align:center;">* Authorization is required to use the 
-                        <br> camera and focus on the
-                    <a id="" href="./data/markers/hiro.png" style="color: blue" target="_blank">HIRO</a> 
-                    marker</b>
-                </p>
-            </div>
+            <!-- End of options buttons -->
         </div>
 
         <div class="w3-container w3-padding-32 ">
@@ -99,36 +112,46 @@
             <img class="slide " src="./img/Platonic-Solids/screenshot3-AR.png " onclick="openModal(3)">
             <img class="slide " src="./img/Platonic-Solids/screenshot4-AR.png" onclick="openModal(4)">
 
-            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">&#10094;</button>
+            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
+                onclick="plusDivs(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
         </div>
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot1-AR.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot2-AR.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot3-AR.png" style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot4-AR.png" style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot1-AR.png"
+                    style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot2-AR.png"
+                    style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot3-AR.png"
+                    style="height: 100%;">
+                <img class="slide-modal w3-display-middle" src="./img/Platonic-Solids/screenshot4-AR.png"
+                    style="height: 100%;">
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
             </div>
 
-            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal()" style="cursor:pointer">×</span>
+            <span
+                class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+                onclick="closeModal()" style="cursor:pointer">×</span>
         </div>
 
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
-            <p><i> Weisstein, Eric W. "Platonic Solid." From MathWorld--A Wolfram Web Resource. https://mathworld.wolfram.com/PlatonicSolid.html </i></p>
-            <p><i>Heilbron, J.L. "Platonic solid." From Encyclopædia Britannica, inc. Web resource https://www.britannica.com/science/Platonic-solid</i></p>
+            <p><i> Weisstein, Eric W. "Platonic Solid." From MathWorld--A Wolfram Web Resource.
+                    https://mathworld.wolfram.com/PlatonicSolid.html </i></p>
+            <p><i>Heilbron, J.L. "Platonic solid." From Encyclopædia Britannica, inc. Web resource
+                    https://www.britannica.com/science/Platonic-solid</i></p>
         </div>
 
         <!-- End page content -->
     </div>
-    
+
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-16 ">
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS " target="_blank " class="w3-hover-text-green ">w3.css</a></p>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS " target="_blank "
+                class="w3-hover-text-green ">w3.css</a></p>
     </footer>
     <script src="../js/script.js"></script>
 </body>
