--- a/projects/solar-system.html
+++ b/projects/solar-system.html
@@ -34,15 +34,15 @@
 
         <div class="w3-container" id="about" style="text-align:justify;">
             <p>
-                The Solar System was formed 4.6 billion years ago. The vast majority of the system's mass is 
-                in the Sun, with most of the remaining mass contained in Jupiter. It presents 8 planets around 
-                the sun, being Mercury, Venus, Earth, Mars with a solid surface and Jupiter, Saturn, Uranus, 
+                The Solar System was formed 4.6 billion years ago. The vast majority of the system's mass is
+                in the Sun, with most of the remaining mass contained in Jupiter. It presents 8 planets around
+                the sun, being Mercury, Venus, Earth, Mars with a solid surface and Jupiter, Saturn, Uranus,
                 Neptune in the gaseous state and Pluto as a dwarf planet.
             </p>
 
             <p>
-                The solar system has other interesting points, like a moon around the earth in which it has 
-                a strong influence on the tides and waves in the oceans. On Saturn, you can see a cloud made 
+                The solar system has other interesting points, like a moon around the earth in which it has
+                a strong influence on the tides and waves in the oceans. On Saturn, you can see a cloud made
                 up of rocks and ring-shaped particles that orbit the planet.
             </p>
 
@@ -54,7 +54,8 @@
                 <p></p>
             </div>
 
-            <iframe id="scene" class="w3-col l8" src="./src/solar-system-application.html" height="400" style="border:2px solid black;"></iframe>
+            <iframe id="scene" class="w3-col l8" src="./src/solar-system-application.html" height="400"
+                style="border:2px solid black;"></iframe>
 
             <script>
                 // iOS iframe auto-resize workaround
@@ -69,39 +70,57 @@
 
                 }
             </script>
-        </div>
-        
-        <div class="w3-content w3-display-container w3-center w3-cell-row">
-            <div class="w3-container w3-cell">
-                <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Quality of the images</h3>
-                <div class="w3-container w3-row">
-                    <p>
-                        <a id="" href="./src/solar-system-application.html?quality=0" target="_blank">Medium Quality in fullscreen <br> on a new tab</a>
-                    </p>
+
+            <!-- Options buttons -->
+            <div class="w3-row-padding w3-black options-buttons-container">
+                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                    <a href="./src/platonic-solids-application.html" target="_">
+                        <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
+                            <div class="w3-padding" style="width:100%">
+                                <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
+                                <br />Medium Quality
+                            </div>
+                        </div>
+                    </a>
                 </div>
-                <div class="w3-container w3-row">
-                    <p>
-                        <a id="" href="./src/solar-system-application.html?quality=1" target="_blank">High Quality in fullscreen <br> on a new tab</a>
-                        <br><b class="w3-small" style="text-align:center;">* Loading could be longer</b>
-                    </p>
+
+                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                    <a href="./src/platonic-solids-application.html" target="_">
+                        <div class=" w3-display-container" style="background: url('img/Solar-System/blur.jpg') center;">
+                            <div class="w3-padding" style="width:100%">
+                                <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
+                                <br />High Quality
+                            </div>
+                        </div>
+                    </a>
                 </div>
+
+                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                    <a href="./src/platonic-solids-application-AR.html" target="_">
+                        <div class=" w3-display-container"
+                            style="background: url('img/Solar-System/blur-AR.jpg') center;">
+                            <div class="w3-padding" style="width:100%">
+                                <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
+                                <br />Augmented Reality
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
+                    <a href="./src/platonic-solids-application-AR.html" target="_">
+                        <div class=" w3-display-container"
+                            style="background: url('img/Solar-System/blur-VR.jpg') center;">
+                            <div class="w3-padding" style="width:100%">
+                                <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
+                                <br />Virtual Reality
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
             </div>
-            <div class="w3-container w3-cell">
-                <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey">Other Tools</h3>
-                <p style="text-align:center;">
-                    <a id="" href="./src/solar-system-application-AR.html" target="_blank">Augmented Reality in fullscreen <br> on new tab</a>
-                    <br><b class="w3-small" style="text-align:center;">* Authorization is required to use 
-                        the <br> camera and focus on the
-                    <a id="" href="./data/markers/hiro.png" style="color: blue" target="_blank">HIRO</a> 
-                    marker</b>
-                </p>
-                <p>
-                    <a id="" href="./src/solar-system-application-VR.html" target="_blank">Virtual Reality in fullscreen 
-                        <br> on a new tab</a>
-                    <br><b class="w3-small" style="text-align:center;">* Click on VR Button to active <br> 
-                        Virtual Reality on your device</b>
-                </p>
-            </div>
+            <!-- End of options buttons -->
         </div>
 
         <div class="w3-container w3-padding-32 ">
@@ -109,26 +128,37 @@
         </div>
 
         <div class="w3-content w3-display-container w3-center w3-row ">
-            <img class="slide" src="./img/Solar-System/screenshot1-AR.jpeg" style="border:1px solid black" onclick="openModal(1)">
-            <img class="slide" src="./img/Solar-System/screenshot2-AR.jpeg" style="border:1px solid black" onclick="openModal(2)">
-            <img class="slide" src="./img/Solar-System/screenshot3-AR.jpeg" style="border:1px solid black" onclick="openModal(3)">
-            <img class="slide" src="./img/Solar-System/screenshot4-AR.jpeg" style="border:1px solid black" onclick="openModal(4)">
-            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">&#10094;</button>
+            <img class="slide" src="./img/Solar-System/screenshot1-AR.jpeg" style="border:1px solid black"
+                onclick="openModal(1)">
+            <img class="slide" src="./img/Solar-System/screenshot2-AR.jpeg" style="border:1px solid black"
+                onclick="openModal(2)">
+            <img class="slide" src="./img/Solar-System/screenshot3-AR.jpeg" style="border:1px solid black"
+                onclick="openModal(3)">
+            <img class="slide" src="./img/Solar-System/screenshot4-AR.jpeg" style="border:1px solid black"
+                onclick="openModal(4)">
+            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
+                onclick="plusDivs(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
         </div>
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot1-AR.jpeg" style="height: 100%; border:1px solid black">
-                
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot2-AR.jpeg" style="height: 100%; border:1px solid black">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot3-AR.jpeg" style="height: 100%; border:1px solid black">
-                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot4-AR.jpeg" style="height: 100%; border:1px solid black">
+                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot1-AR.jpeg"
+                    style="height: 100%; border:1px solid black">
+
+                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot2-AR.jpeg"
+                    style="height: 100%; border:1px solid black">
+                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot3-AR.jpeg"
+                    style="height: 100%; border:1px solid black">
+                <img class="slide-modal w3-display-middle" src="./img/Solar-System/screenshot4-AR.jpeg"
+                    style="height: 100%; border:1px solid black">
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
             </div>
 
-            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal(0)" style="cursor:pointer">×</span>
+            <span
+                class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+                onclick="closeModal(0)" style="cursor:pointer">×</span>
         </div>
 
         <div class="w3-container w3-padding-32 ">
@@ -136,20 +166,23 @@
         </div>
 
         <div class="w3-content w3-display-container w3-center w3-row">
-            <img class="slide2" src="./img/Solar-System/screenshot5-VR.png" style="width: 90%; height: auto; border:1px solid black" onclick="openModal2(1)">
+            <img class="slide2" src="./img/Solar-System/screenshot5-VR.png"
+                style="width: 90%; height: auto; border:1px solid black" onclick="openModal2(1)">
             <!--
             <img class="slide2" src="./img/Solar-System/screenshot6-VR.jpeg" style="border:1px solid black" onclick="openModal2(2)">
             <img class="slide2" src="./img/Solar-System/screenshot7-VR.jpeg" style="border:1px solid black" onclick="openModal2(3)">
             <img class="slide2" src="./img/Solar-System/screenshot8-VR.jpeg" style="border:1px solid black" onclick="openModal2(4)">
             -->
-            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs2(-1) ">&#10094;</button>
+            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
+                onclick="plusDivs2(-1) ">&#10094;</button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs2(1) ">&#10095;</button>
         </div>
 
         <div id="modal-slideshow-2" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot5-VR.png" style="height: 100%; border:1px solid black">
-            <!--
+                <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot5-VR.png"
+                    style="height: 100%; border:1px solid black">
+                <!--
                 <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot6-VR.jpeg" style="height: 100%; border:1px solid black">
                 <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot7-VR.jpeg" style="height: 100%; border:1px solid black">
                 <img class="slide-modal-2 w3-display-middle" src="./img/Solar-System/screenshot8-VR.jpeg" style="height: 100%; border:1px solid black">
@@ -158,14 +191,19 @@
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal2(1)">❯</span>
             </div>
 
-            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright" onclick="closeModal2()" style="cursor:pointer">×</span>
+            <span
+                class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+                onclick="closeModal2()" style="cursor:pointer">×</span>
         </div>
 
         <div class="w3-panel w3-leftbar w3-serif">
             <h5><b>Reference:</b></h5>
-            <p><i>Alpha-Element, "Saturn-Ring texture", Web resource: https://www.deviantart.com/alpha-element/art/Stock-Image-Saturn-Rings-393767006 </i></p>            
-            <p><i>Solar System Scope, "Solar System textures", Web resource: https://www.solarsystemscope.com/textures/</i></p>
-            <p><i>Owen, T.C. "Solar System." From Encyclopædia Britannica, inc. Web resource https://www.britannica.com/science/solar-system</i></p>
+            <p><i>Alpha-Element, "Saturn-Ring texture", Web resource:
+                    https://www.deviantart.com/alpha-element/art/Stock-Image-Saturn-Rings-393767006 </i></p>
+            <p><i>Solar System Scope, "Solar System textures", Web resource:
+                    https://www.solarsystemscope.com/textures/</i></p>
+            <p><i>Owen, T.C. "Solar System." From Encyclopædia Britannica, inc. Web resource
+                    https://www.britannica.com/science/solar-system</i></p>
         </div>
 
         <!-- End page content -->
@@ -173,7 +211,8 @@
 
     <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-16 ">
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS" target="_blank " class="w3-hover-text-green ">w3.css</a></p>
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS" target="_blank "
+                class="w3-hover-text-green ">w3.css</a></p>
     </footer>
     <script type="text/javascript" src="../js/script.js"></script>
     <script type="text/javascript">
